update tests to use/control updated config parameters; fix bug in SpeedPolar parsing; all tests now passing;